src/App.css
.App {
  background: white;
}

.App-logo {
  animation: App-logo-spin infinite 20s linear;
  height: 40vmin;
  pointer-events: none;
}

.App-p {
  margin: 10px;
  font-size: 14pt;
}

h1 {
  margin: 10px;
}

.mt1 {
  margin-top: 5px;
}

.text-center {
  text-align: center;
}

.App-header {
  background-color: #282c34;
  min-height: 20vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-content {
  padding: 10px;
}

.App-footer {
  margin-bottom: 30px;
  font-size: 11pt;
  color: gray;
}

.Search-input {
  padding: 10px;
  border: 1px solid lightblue;
  outline: none;
}

.Search-input:focus {
  background-color: lightcyan;
}

.Search-btn {
  background: white;
  border: 1px solid gray;
}

.Search-btn:hover {
  background: lightblue;
}

.Search-ava {
  width: 100px;
  height: 100px;
}

.Search-stat {
  margin-left: 10px;
}

.Search-lang-container {
  width: 400px;
}

.Search-lang-item {
  background-color: #282c34;
  color: white;
  padding: 5px;
  margin: 2px;
  border-radius: 5px;
  font-weight: bold;
}

.Search-lang-item > span {
  font-weight: normal;
}

.Search-result-container {
  width: 70%;
  min-height: 163px;
}

.flex {
  display: flex;
}

.flex-wrap {
  display: flex;
  flex-wrap: wrap;
}

.flex-col {
  flex-direction: column;
}

.flex-half {
  width: 50%;
}

.align-center {
  align-items: center;
}

.justify-center {
  justify-content: center;
}

.space-between {
  justify-content: space-between;
}

.space-around {
  justify-content: space-around;
}

.Card-section {
  margin-bottom: 25px;
  width: 50%;
}

.Card-header {
  display: flex;
  align-items: center;
}

.Card-subheader {
  color: gray;
  margin-left: 10px;
  font-weight: bold;
}

.Card-container {
  display: flex;
  flex-wrap: wrap;
}

.Card-img {
  width: 80px;
  height: 80px;
  margin-bottom: 10px;
}

.Card-right {
  width: 170px;
}

.Card-name {
  font-size: 11pt;
  text-align: center;
}

.Card {
  padding: 10px;
  margin: 5px;
  border: 1px solid gray;
  border-radius: 2px;
  flex-wrap: wrap;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.Card:hover {
  background-color: aliceblue;
  cursor: pointer;
}

.Card-stat {
  color: gray;
  font-size: 10pt;
  margin-top: 10px;
}

.Card > span > a {
  color: darkslategrey;
}

.Tab {
  padding: 20px 50px;
  background-color: dimgrey;
  color: white;
  border-bottom: 1px solid dimgrey;
  cursor: pointer;
}

.Tab.active {
  background-color: lightslategray;
  border-bottom: 2px solid #61dafb;
}

@media (max-width: 600px) {
  .Card-section {
    width: 100%;
  }

  .Card {
    width: 100%;
  }

  .Card-right {
    width: auto;
  }

  .Search-result-container {
    width: 100%;
  }

  .Search-result-summary {
    justify-content: space-around;
    align-items: center;
  }

  .Search-lang-container {
    margin-top: 15px;
    justify-content: center;
    align-items: center;
  }
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

